# ChangeLog for x11-themes/fvwm_icons
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm_icons/ChangeLog,v 1.7 2005/08/26 13:43:32 agriffis Exp $

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> fvwm_icons-1.0.ebuild:
  add ~ia64

  19 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> fvwm_icons-1.0.ebuild:
  Marked stable on amd64.

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> fvwm_icons-1.0.ebuild:
  Added IUSE=

  01 Sep 2003; Tavis Ormandy <taviso@gentoo.org> fvwm_icons-1.0.ebuild:
  stable on x86 and alpha

*fvwm_icons-1.0 (12 Sep 2002)

  12 Sep 2002; Andy Arbon <andy@andrewarbon.co.uk>;
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details 
  about  writing correct changelogs are explained in the skel.ChangeLog file 
  which you  can find in the root directory of the portage repository.
