@@ -1,3 +1,3 @@
-MD5 0dfcf2e8a6eca3c3c5eed36fee520d73 fvwm_icons-1.0.ebuild 588
 MD5 ee21097ff6f4d47f2d60f207fc7c5037 ChangeLog 1053
+MD5 98f4c68d1018cb3f462ee38339de66b2 fvwm_icons-1.0.ebuild 587
 MD5 edec3e02f6e188d050609c97eacea16c files/digest-fvwm_icons-1.0 63
