@@ -1,3 +1,3 @@
 MD5 53a351b0563a2b0ee701c0edfaba64d1 ChangeLog 1051
-MD5 e7aff7329388afc0708a28969e130371 fvwm_sounds-1.0.ebuild 573
+MD5 06aac1520de7f2828e239a7f7f8f1192 fvwm_sounds-1.0.ebuild 572
 MD5 9fed0f5d6d3d5a45ddba44e4d6030740 files/digest-fvwm_sounds-1.0 59
