@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/fvwm_icons
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm_icons/ChangeLog,v 1.7 2005/08/26 13:43:32 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm_icons/ChangeLog,v 1.8 2005/10/02 19:36:16 agriffis Exp $
+
+  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> fvwm_icons-1.0.ebuild:
+  Mark 1.0 stable on ia64
 
   26 Aug 2005; Aron Griffis <agriffis@gentoo.org> fvwm_icons-1.0.ebuild:
   add ~ia64
